Fix crash when cutting an item that was dragged to the root

BUG: 466242